--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,7 +1,11 @@
 FROM node:alpine
 
-RUN npm install --no-optional -g webpack webpack-cli yarn
+RUN npm install --no-optional -g webpack webpack-cli yarn \
+    yarn global add @vue/cli
 
 RUN npm config set registry http://registry.npmjs.org/
 
-CMD ["sleep", "5d"]
+COPY init.sh /
+RUN chmod +x /init.sh
+
+CMD ["/init.sh"]
