--- a/front/package.json
+++ b/front/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "core-js": "^3.4.4",
     "pretty-checkbox": "^3.0.3",
+    "v-calendar": "^1.0.1",
     "vue": "^2.6.10",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
@@ -32,7 +35,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-unused-vars": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
