--- a/api/composer.json
+++ b/api/composer.json
@@ -7,6 +7,9 @@
         "ext-iconv": "*",
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "easycorp/easyadmin-bundle": "^2.3",
+        "firebase/php-jwt": "^5.0",
+        "ramsey/uuid": "^3.9",
+        "ramsey/uuid-doctrine": "^1.5",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
@@ -16,6 +19,7 @@
         "symfony/maker-bundle": "^1.14",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
+        "symfony/serializer": "5.0.*",
         "symfony/string": "5.0.*",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.0.*",
